fix z-index of nav so it doesn't cover mobile navbar

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -26,11 +26,12 @@
   --weight-normal: 400;
   --weight-medium: 500;
   --weight-bold: 700;
-  --z-index-feedback: 6;
+  --z-index-feedback: 7;
+  --z-index-nav-mobile: 6;
   --z-index-navbar-dropdown-link: 5;
   --z-index-navbar-dropdown: 4;
-  --z-index-nav: 3;
-  --z-index-navbar: 2;
+  --z-index-navbar: 3;
+  --z-index-nav: 2;
   --z-index-footer: 1;
 }
 
