--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -6,7 +6,6 @@
   overflow-wrap: break-word;
   font-size: 0.875rem;
   line-height: 1.35;
-  z-index: var(--z-index-nav);
 }
 
 @media screen and (max-width: 768px) {
@@ -15,6 +14,7 @@
     bottom: 0;
     left: 0;
     transform: translateX(-100%);
+    z-index: var(--z-index-nav-mobile);
   }
 }
 
@@ -23,6 +23,7 @@
     top: var(--height-to-body);
     margin-bottom: 1.5rem;
     height: var(--height-nav);
+    z-index: var(--z-index-nav);
   }
 }
 
